--- a/Deep_Q_Learning_for_Lunar_Landing.ipynb
+++ b/Deep_Q_Learning_for_Lunar_Landing.ipynb
@@ -375,6 +375,8 @@
         "eps_decay_value = 0.995\n",
         "epsilon = eps_starting_value\n",
         "scores_on_100_episodes = deque(maxlen=100)\n",
+        "\n",
+        "\n",
         "for episode in range(1, number_episode+1):\n",
         "  state, _ = env.reset()\n",
         "  score = 0\n",
@@ -383,7 +385,19 @@
         "    next_state, reward, done, _, _ = env.step(action)\n",
         "    agent.step(state, action, reward, next_state, done)\n",
         "    state = next_state\n",
-        "    score += reward"
+        "    score += reward\n",
+        "    if done:\n",
+        "      break\n",
+        "  scores_on_100_episodes.append(score)\n",
+        "  epsilon = max(eps_ending_value, eps_decay_value*epsilon)\n",
+        "  print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(episode, np.mean(scores_on_100_episodes)), end=\"\")\n",
+        "  if episode % 100 == 0:\n",
+        "    print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(episode, np.mean(scores_on_100_episodes)))\n",
+        "  if np.mean(scores_on_100_episodes) >= 200.0\n",
+        "    print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(episode-100, np.mean(scores_on_100_episodes)))\n",
+        "    torch.save(agent.local_qnetwork.state_dict(), 'checkpoint.pth')\n",
+        "    break\n",
+        "\n"
       ],
       "metadata": {
         "id": "HTvaA32-iyrc"
